--- a/css/lunbo.css
+++ b/css/lunbo.css
@@ -29,3 +29,25 @@
 .box span:nth-of-type(2) {
   right: 0;
 }
+.box em {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #a39d9d;
+  z-index: 100;
+  position: absolute;
+  bottom: 30px;
+}
+.box em:nth-of-type(1) {
+  left: 40%;
+}
+.box em:nth-of-type(2) {
+  left: 45%;
+}
+.box em:nth-of-type(3) {
+  left: 50%;
+}
+.box .show {
+  background-color: red;
+}
