--- a/css/lunbo.less
+++ b/css/lunbo.less
@@ -28,4 +28,28 @@
             right: 0;
         }
     }
+   
+    em{
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: rgb(163, 157, 157);
+        z-index: 100;
+        position: absolute;
+        bottom: 30px;
+        // left: 200px;
+        &:nth-of-type(1){
+            left: 40%;
+        }
+        &:nth-of-type(2){
+            left: 45%;
+        }
+        &:nth-of-type(3){
+            left: 50%;
+        }
+    }
+    .show{
+        background-color: red;
+    }
 }
