--- a/css/lunbo.less
+++ b/css/lunbo.less
@@ -8,7 +8,7 @@
     height: 450px;
     margin: 50px auto;
     position: relative;
-    // overflow: hidden;
+    overflow: hidden;
     .inner{
         position: absolute;
         width: 30000px;
